Fixed formatting on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #000000;
   color: #FFFFFF;
@@ -29,7 +28,6 @@ a {
   padding: 20px;
   border: 2px solid #808080;
   box-shadow: 2px 2px 5px rgb(204, 0, 255);
-  margin-left: 210px;
 }
 
 .serif {
@@ -62,8 +60,8 @@ a {
   color: white;
 }
 
-div.content {
-  margin-left: 200px;
+.content {
+  margin-left: 0px;
   padding: 1px 16px;
   height: 1000px;
 }
@@ -77,8 +75,8 @@ div.content {
   .sidebar a {
     float: left;
   }
-  div.boxes {
-    margin-left: 0;
+  .content {
+    margin-left: 200px;
   }
 }
 
